*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -10,6 +10,8 @@ Järjestelmä toteutetaan Java-kielellä ja järjestelmän käyttö vaatii, että selain
 
 \section{Sanasto}
 
+\input{termit}
+
 \section{Arkkitehtuurisuunnitelma}
 
 \section{Tietokanta}
