*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -12,13 +12,32 @@ Järjestelmä toteutetaan Java-kielellä ja järjestelmän käyttö vaatii, että selain
 
 \input{termit}
 
+\section{Toiminnot}
+
 \section{Arkkitehtuurisuunnitelma}
 
 \section{Tietokanta}
+
+Tietotokannan rakenteen määrää eAssari kehys. Rakenne on kuvattu liitteessä 1.
 
 \section{Osajärjestelmät}
 
 \section{Komponentit}
 
 \section{Luokat}
+
+User
+Course
+Module
+Assignment (tehtävä)
+Criteria (abstrakti)
+
+DBHandler
+DBConnectionPool
+
+Analyzer
+Displayer
+Feedback
+Composer
+
 
