*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -16,7 +16,7 @@ Järjestelmä toteutetaan Java-kielellä ja järjestelmän käyttö vaatii, että selain
 
 \section{Toiminnot}
 
-... 
+Tämä lukuu kuvaa järjestelmän HTML-sivut ja sen, mitä toimintoja ne tarjoavät käyttäjälle.
 
 \subsection{Rekisteröityminen}
 
@@ -29,8 +29,16 @@ Kirjautumissivulla käyttäjä syöttää tunnuksensa ja salasanansa. Jos kirjautumine
 \subsection{Käyttäjätietojen muokkaaminen}
 
 Käyttäjätietosivulla sisäänkirjautunut käyttäjä voi muokata rekisteröintitietojaan, poislukien tunnus joka on valittu
-rekiströidyttäessä. 
+rekisteröidyttäessä. 
 
+\subsection{Kurssin valinta}
+
+Kurssinvalintasivulla käyttäjä voi valita minkä kurssin tehtäviä haluaa tarkastella.
+Jos käyttäjällä on opettajan käyttöoikeudet, tällä sivullä voi myös perustaa uuden kurssin.
+
+\subsection{Tehtävien valinta (opettaja) }
+
+Opettajalle näytetään tehtävälistaus
 
 
 
