*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -31,7 +31,7 @@ Explorer-selaimilla.
 
 \section{Toiminnot}
 
-T‰m‰ lukuu kuvaa j‰rjestelm‰n HTML-sivut ja sen, mit‰ toimintoja ne tarjoav‰t k‰ytt‰j‰lle.
+T‰m‰ luku kuvaa j‰rjestelm‰n HTML-sivut ja sen, mit‰ toimintoja ne tarjoav‰t k‰ytt‰j‰lle.
 
 \subsection{Rekisterˆityminen}
 
@@ -74,9 +74,13 @@ sek‰ onnistuneesti ratkaistujen teht‰vien m‰‰r‰. Lista on helposti tulostettavas
 
 Listassa opiskelijan nimi toimii linkkin‰ ko. opiskelijan k‰ytt‰j‰tietosivulle.
 
+Kurssin statistiikka toteutetaan toisessa kehitysiteraatiossa.
+
 \subsection{K‰ytt‰j‰n tiedot (opettaja)}
 K‰ytt‰j‰n statistiikkasivulla opettajalle n‰ytet‰‰n opiskelijan tarkemmat tiedot.
 Listassa n‰kyy salasanaa lukuunottamatta kaikki rekisterˆintitiedot.
+
+K‰ytt‰j‰n tiedot toteutetaan toisessa kehitysiteraatiossa.
 
 \subsection{Teht‰vien valinta (opiskelija)}
 
@@ -93,6 +97,8 @@ opiskelija kirjoittaa vastauksensa. Lis‰ksi on linkki jolla p‰‰see takaisin teht
 Kun opiskelija on kirjoittanut vastauksensa, h‰n painaa "Suorita" nappia joka vie
 takaisin teht‰v‰vastaussivulle. Sivulla n‰ytet‰‰n samat tiedot kuin alussa, mutta
 lis‰ksi n‰ytet‰‰n palautetta teht‰v‰n ratkaisun onnistumisesta/ep‰onnistumisesta.
+
+Teht‰v‰‰n vastaaminen toteutetaan toisessa kehitysiteraatiossa.
 
 \section{Arkkitehtuurisuunnitelma}
 
