--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -136,7 +136,9 @@ sis‰ltyy jokaiseen kurssiin. Eli kun teht‰v‰ luodaan, niin se liitet‰‰n jokaisee
 kun kurssi luodaan, niin jokainen teht‰v‰ lis‰t‰‰n kyseiseen uuteen kurssiin. T‰m‰ linkitys tapahtuu
 "taskinmodule"-tietokantataulussa. 
 
-Tietokantaa k‰ytet‰‰n aina DBHandler-luokan kautta, joka piilottaa tietokanta rakenteen yksityiskohdat.
+Kokonaan k‰ytt‰m‰tt‰ j‰‰v‰t eassarin taulut taskattributes, pluginparameters, pluginparamattributes
+
+Tietokantaa k‰ytet‰‰n aina DBHandler-luokan kautta, joka piilottaa tietokantarakenteen yksityiskohdat.
 Eli SQL-lauseita tulee vain ks. luokkaan eik‰ muualle koodiin. DBHandler-luokasta voidaan luoda instanssi
 staattisen DBHandler.getInstance() -metodin avulla. T‰m‰ tarkoittaa sit‰, ett‰ ko. luokkaa voidaan 
 k‰ytt‰‰ virtuaalikoneen sis‰ll‰ mist‰ vaan.
